# eficek

./: .gitignore  Eficek.sln  dev_docs.md  user_docs.md
Eficek/: Eficek.csproj  Eficek.http  Program.cs
Eficek.Database/: DatabaseUserService.cs  Eficek.Database.csproj  EficekDbContext.cs  PasswordHasher.cs  UserCredentials.cs
Eficek.Database/Entities/: User.cs  UserInternal.cs
Eficek.Database/Models/: DeleteUser.cs  ICredentials.cs  IdUser.cs  LoginCredentials.cs  PublicUser.cs  UpdateUser.cs  UpdateUserPassword.cs  User.cs  UserDetail.cs
Eficek.Gtfs/: Agency.cs  Calendar.cs  CalendarDate.cs  Constants.cs  Coordinate.cs  CoordinateExtension.cs  Edge.cs  Eficek.Gtfs.csproj  FeedInfo.cs  GtfsConfiguration.cs  GtfsDescription.cs  GtfsDownloader.cs  GtfsParser.cs  IFromRow.cs  Location.cs  LocationType.cs  NearbySquare.cs  Network.cs  NetworkBuilder.cs  Node.cs  NodeSearch.cs  ParseException.cs  PragueGtfs.cs  PrahaGtfs.cs  Route.cs  Service.cs  Stop.cs  StopGroup.cs  StopGroupExtension.cs  StopTime.cs  Trip.cs  UTMCoordinate.cs  UtmCoordinate.cs  UtmCoordinateBuilder.cs
Eficek.Gtfs.Tests/: CoordinatesDistance.cs  Eficek.Gtfs.Tests.csproj  FirstNodeAfterTime.cs  Hashing.cs  NodeSorting.cs  StopHelper.cs  StopIdGroupName.cs  UTMCoordinates.cs
Eficek.Realtime/: Class1.cs  Eficek.Realtime.csproj
Eficek/Controllers/: AdminController.cs  AdministrationController.cs  NetworkController.cs  RoutingController.cs  StopsController.cs
Eficek/Infrastructure/: DayHelper.cs  NextDayOfWeek.cs
Eficek/Models/: IFrom.cs  (+10 more)
utm_convert/: Cargo.toml
utm_convert/src/: lib.rs
(+11 files in other folders)
