[package]
name = "utm_convert"
version = "0.1.0"
edition = "2021"
authors = ["Ondřej Machota <ondrejmachota@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "umt_convert"
crate-type = ["cdylib"]

[dependencies]
proj = "0.27.2"
